k8s/config/exec.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exec
  name: exec
  namespace: jobico
spec:
  selector:
    app: exec
  ports:
    - port: 8585
      protocol: TCP
  type: ClusterIP

---
