k8s/config/recorder.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobico

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: recorder-sfs
  namespace: jobico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recorder
  template:
    metadata:
      labels:
        app: recorder
    spec:
      containers:
      - name: recorder
        image: jobico/recorder:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 50054
            hostPort: 50054
            protocol: TCP
        volumeMounts:
          - name: recorder-data
            mountPath: /usr/share/jobico/recorder
  volumeClaimTemplates:
    - metadata:
        name: recorder-data
        namespace: jobico
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: recorder-svc
  namespace: jobico
spec:
  selector:
    app: recorder
  ports:
    - name: "50054"
      port: 50054
  type: ClusterIP
