k8s/config/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  namespace: jobico
  labels:
    app: jaeger
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
          - hostPort: 5775
            containerPort: 5775
            protocol: UDP
          - hostPort: 6831
            containerPort: 6831
            protocol: UDP
          - hostPort: 6832
            containerPort: 6832
            protocol: UDP
          - hostPort: 5778
            containerPort: 5778
            protocol: TCP
          - hostPort: 16686
            containerPort: 16686
            protocol: TCP
          - hostPort: 16687
            containerPort: 16687
            protocol: TCP
          - hostPort: 14268
            containerPort: 14268
            protocol: TCP
          - hostPort: 14269
            containerPort: 14269
            protocol: TCP
          - hostPort: 9411
            containerPort: 9411
            protocol: TCP
          - hostPort: 4317
            containerPort: 4317
            protocol: TCP
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 3750m
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: jobico
spec:
  type: ClusterIP
  selector:
    app: jaeger
  ports:
  - name: "5775"
    port: 5775
    protocol: UDP
  - name: "6831"
    port: 6831
    protocol: UDP
  - name: "6832"
    port: 6832
    protocol: UDP
  - name: "5778"
    port: 5778
    protocol: TCP
  - name: "4317"
    port: 4317
    protocol: TCP
  - name: "16686"
    port: 16686
    protocol: TCP
  - name: "16687"
    port: 16687
    protocol: TCP
  - name: "14268"
    port: 14268
    protocol: TCP
  - name: "14269"
    port: 14269
    protocol: TCP
  - name: "9411"
    port: 9411
    protocol: TCP
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: jaeger-ingress
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
  - secretName: jaeger-cert
    hosts:
      - jaeger
  rules:
    - host: jaeger
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
