k8s/config/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: jobico
  labels:
    app: prometheus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: quay.io/prometheus/prometheus:latest
          args:
            - "--config.file=/conf/prometheus.yaml"
            - "--storage.tsdb.path=/prometheus/"
            - "--enable-feature=otlp-write-receiver"
            - "--log.level=debug"
          ports:
            - name: prometheus
              containerPort: 9090
              hostPort: 9090
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 3750m
          volumeMounts:
            - name: cfg-volume
              mountPath: /conf
      volumes:
        - name: cfg-volume
          configMap:
            name: cfg-prometheus
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: jobico
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: prometheus
      port: 9090
      targetPort: prometheus

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: prometheus-ingress
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
  - secretName: prometheus-cert
    hosts:
      - prometheus
  rules:
    - host: prometheus
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
