k8s/config/queue.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: queue
  namespace: jobico
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: queue
        image: jobico/queue:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 50051
            hostPort: 50051
            protocol: TCP
        volumeMounts:
          - name: queue-data
            mountPath: /usr/share/jobico/queue
  volumeClaimTemplates:
    - metadata:
        name: queue-data
        namespace: jobico
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi


---

apiVersion: v1
kind: Service
metadata:
  name: queue
  namespace: jobico
spec:
  selector:
    app: queue
  ports:
    - port: 50051
      protocol: TCP
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: queue-ingress
  namespace: jobico
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - queue
      secretName: queue-cert
  rules:
    - host: queue
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: queue
                port:
                  number: 50051
